# shiftcraft

./: .markdownlint.yaml  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  docker-compose.yml  mise.toml  pyproject.toml  requirements.txt  ruff.toml  ty.toml  zensical.toml
.agents/skills/fix-quality/: SKILL.md
.agents/skills/fix-quality/references/: ruff-format.md  ruff-lint.md  ty-check.md
.agents/skills/update-docs/: SKILL.md
.agents/skills/update-docs/references/: principle-4-link-to-code.md  principle-5-format-style.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  docs.yml
design/: README.md  architecture.md  problem.md
design/adr/: 001-dynamic-constraint-engine.md  002-parallel-build-rewrite-strategy.md
design/services/core/: constraint-primitives.md
docs/: index.md
docs/dev/: index.md  resources.md
docs/dev/contributing/: authoring-documentation.md  index.md  naming-conventions.md
docs/dev/contributing/documentation-principles/: principle-4-link-to-code.md  principle-6-structure-uniformity.md
docs/dev/setup/: from-template.md  index.md
docs/dev/testing/: index.md  integration-tests.md  optional-markers.md  property-tests.md  unit-tests.md
examples/basic_app/: README.md  analyze_output.py  input.json  output.json  run.py  settings.json
scripts/: setup.sh
